Forge updated to 1.19-41.0.64 (fixes API incompatibility crash).